<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">

    <string name="app_name">CollEdge</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- ' and main ' -->
    <string name="action_home">Home</string>
    <string name="action_exit">Exit</string>
    <string name="action_back">Back</string>
    <string name="costomview">im custom view</string>
    <string name="action_share">Share - App</string>
    <string name="activity_semester">Semester List</string>
    <string name="activity_video_lectures">Video Lectures</string>
    <string name="activity_short_notes">Short Notes</string>
    <string name="activity_lab_program">Lab\'s Program</string>
    <string name="question_paper">Question Paper</string>
    <string name="activity_solution">Solution</string>
    <string name="notification">Notification</string>

    <!-- ' Developer About ' -->
    <string name="dev_by">Developed and Designed By:- Vimal (CVS)</string>
    <string name="the_perfect_place">The perfect place for easy learning</string>


    <!-- ' Semester list  ' -->
    <string name="but_course">All Subjects Notes.</string>
    <string name="but_Semester1">S E M - I</string>
    <string name="but_Semester2">S E M - II</string>
    <string name="but_Semester3">S E M - III</string>
    <string name="but_Semester4">S E M - IV</string>
    <string name="but_Semester5">S E M - V</string>
    <string name="but_Semester6">S E M - VI</string>

    <!-- ' Courses list  ' -->
    <string name="cs_course">Computer Science</string>
    <string name="cs_year_1"> Computer Science Year(I)</string>
    <string name="cs_year_2"> Computer Science Year(II)</string>
    <string name="cs_year_3"> Computer Science Year(III)</string>

    <!-- ' Content Main  ' -->

    <string name="action_about">About us</string>
    <string name="action_about_society">The Edge Squad</string>
    <string name="about">A B O U T</string>
    <string name="but_hons">H O N O U R S</string>
    <string name="but_vocational">V O C A T I O N A L</string>
    <string name="activity_question_Paper">Q U E S T I O N S</string>
    <string name="activity_syllabus">S Y L L A B U S</string>
    <string name="activity_new_update">N E W - U P D A T E</string>

    <string name="activity_contributeus">C O N T R I B U T E  U S</string>

    <!-- ' Honours  ' -->

    <string name="ba_h_english">B.A. - E N G L I S H</string>
    <string name="ba_h_economics">B.A. - E C O N O M I C S</string>
    <string name="ba_h_history">B.A. - H I S T O R Y</string>
    <string name="ba_h_hindi">B.A. - H I N D I</string>
    <string name="ba_h_business_economics">B B E</string>
    <string name="bas_h_computer_science">B.SC. - C S</string>
    <string name="bachelor_of_commerce_hons">B. C O M. (H O N S.)</string>


    <string name="ba_tourism_management">B.A - Tourism Management</string>
    <string name="ba_materials_management">B.A - Materials Management</string>
    <string name="ba_human_resource_management">B.A - Human Resource Management</string>
    <string name="ba_small_and_medium_enterprises">B.A - Small and Medium Enterprises</string>
    <string name="ba_management_and_marketing_of_insurance">B.A - Management and Marketing of Insurance</string>
    <string name="ba_office_management_and_secretarial_practice">B.A - Office Management and Secretarial Practice</string>
    <string name="ba_marketing_management_and_retail_business">B.A - Marketing Management and Retail Business</string>
    <string name="bachelor_of_management_studies">Bachelor of Management Studies</string>


    <!-- ' Vocational  ' -->


    <string name="ba_v_tourism_management">B.A. - T O U R I S M</string>
    <string name="ba_v_materials_management">B.A. - M M</string>
    <string name="ba_v_human_resource_management">B.A. - H R M</string>
    <string name="ba_v_small_and_medium_enterprises">B.A. - S M E</string>
    <string name="ba_v__management_and_marketing_of_insurance">B.A. - M M I</string>
    <string name="ba_v_office_management_and_secretarial_practice">B.A. - O M S P</string>
    <string name="ba_v_marketing__management_and_retail_business">B.A. - M M R B</string>
    <string name="bachelor_of__management_studies">B M S</string>


    <string name="ba_english">B.A - English</string>
    <string name="ba_economics">B.A - Economics</string>
    <string name="ba_history">B.A - History</string>
    <string name="ba_hindi">B.A - Hindi</string>
    <string name="ba_business_economics">B.A - Business Economics</string>
    <string name="bsc_computer_science">B.Sc - Computer Science</string>
    <string name="ba_bachelor_of_commerce">Bachelor of Commerce</string>

    <!-- ' Feedback Activity  ' -->

    <string name="feedback_input">Feedback</string>
    <string name="name_input">Name</string>
    <string name="email_input">Email</string>
    <string name="feedback_input_hint">Enter your feedback</string>
    <string name="name_input_hint">Enter your name</string>
    <string name="email_input_hint">Enter your email</string>


    <!-- ' Notification Dialog  ' -->

    <string name="dialog_content">This is a demo app, showing you how you can use Google VIMALCVS as your feedback form inside any app. Developed by Vimal K. Vishwakarma.</string>



    <string name="github_url">https://github.com/vimalcvs</string>
    <string name="navigation_title">My navigation title</string>


    <!-- ' Testing ' -->

    <string name="arclayout_description">After the formation of the Galactic Empire, </string>
    <string name="arclayout_development">In February 2013,  Disney CFO Jay Rasulo has described the stand-alone films as origin stories. Kathleen Kennedy explained that the stand-alone films will not crossover with the films of the sequel trilogy…</string>
    <string name="long_lorem_ipsum">"Duis tellus metus, elementum a lectus id, aliquet interdum mauris. Nam bibendum efficitur sollicitudin. Proin eleifend libero velit, nec fringilla dolor finibus quis. nMorbi eu libero pellentesque, rutrum metus quis, blandit est. Fusce bibendum accumsan nisi vulputate feugiat. In fermentum laoreet euismod. Praesent sem nisl, facilisis eget odio at, rhoncus scelerisque ipsum. Nulla orci dui, dignissim a risus ut, lobortis porttitor velit.</string>



    <!-- ' Team  ' -->

    <string name="profile_name_1">Vimal K.</string>
    <string name="profile_name_2">Shubham P.</string>
    <string name="profile_name_3">Shubham P.</string>
    <string name="profile_name_4">Shubham P.</string>
    <string name="profile_name_5">Shubham P.</string>
    <string name="profile_name_6">Shubham P.</string>
    <string name="profile_name_7">Shubham P.</string>
    <string name="profile_name_8">Shubham P.</string>
    <string name="profile_name_9">Shubham P.</string>
    <string name="profile_name_10">Shubham P.</string>
    <string name="profile_name_11">Shubham P.</string>
    <string name="profile_name_12">Shubham P.</string>
    <string name="profile_name_13">Shubham P.</string>
    <string name="profile_name_14">Shubham P.</string>
    <string name="profile_name_15">Shubham P.</string>
    <string name="profile_name_16">Shubham P.</string>


</resources>
