<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/main_ic"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="230dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    tools:context="geen.box.MainActivity">

                    <com.smarteist.autoimageslider.SliderLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:id="@+id/imageSlider"/>

                </LinearLayout>

                <GridLayout
                    android:id="@+id/mainGrid"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginTop="230dp"
                    android:layout_weight="1"
                    android:alignmentMode="alignMargins"
                    android:columnCount="3"
                    android:columnOrderPreserved="false"
                    android:padding="2dp"
                    android:rowCount="2">

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester1"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem1" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester1"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">


                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem2" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester2"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem3" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester3"
                                android:textSize="13sp" />

                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">


                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem4" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester4"
                                android:textSize="13sp" />

                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester5"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">


                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem5" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester5"
                                android:textSize="13sp" />

                        </LinearLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/Semester6"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="5dp"
                        android:layout_rowWeight="1"
                        android:clickable="true"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="2dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal|center_vertical"
                            android:layout_margin="16dp"
                            android:orientation="vertical">


                            <ImageView
                                android:layout_width="50dp"
                                android:layout_height="50dp"
                                android:layout_gravity="center"
                                android:src="@drawable/sem6" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:gravity="center"
                                android:padding="3dp"
                                android:text="@string/but_Semester6"
                                android:textSize="13sp" />
                        </LinearLayout>
                    </android.support.v7.widget.CardView>
                </GridLayout>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>