<?xml version='1.0' encoding='utf-8' ?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<android.support.v4.widget.NestedScrollView
		android:background="@color/md_grey_200"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<android.support.constraint.ConstraintLayout
			android:background="@drawable/edu_about_bg"
			android:layout_width="fill_parent"
			android:layout_height="match_parent">
			<ImageView android:id="@+id/imageView139"
				android:layout_width="fill_parent"
				android:layout_height="130dp"
				android:layout_marginTop="8.0dip"
				android:layout_marginStart="8.0dip"
				android:layout_marginEnd="8.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent"
				app:srcCompat="@drawable/ic_graduate_launcher" />
			<TextView
				android:textSize="20.0sp"
				android:textColor="@color/md_grey_600"
				android:id="@+id/textView294"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8.0dip"
				android:text="@string/action_about_society"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="8.0dip"
				android:layout_marginEnd="8.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/imageView139" />
			<TextView android:textSize="@dimen/font_body_s_size"
				android:textColor="@color/md_grey_400"
				android:id="@+id/textView295"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4.0dip"
				android:text="Version"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="8.0dip"
				android:layout_marginEnd="8.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView294" />
			<TextView
				android:textSize="@dimen/font_body_s_size"
				android:textColor="@color/md_grey_400"
				android:id="@+id/textView296"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="4.0dip"
				android:text="1.0"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				app:layout_constraintTop_toBottomOf="@+id/textView295" />
			<View
				android:id="@+id/view106"
				android:background="@color/md_grey_300"
				android:layout_width="150.0dip"
				android:layout_height="2.0dip"
				android:layout_marginTop="8.0dip"
				android:layout_marginStart="32.0dip"
				android:layout_marginEnd="32.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView296" />
			<TextView
				android:textSize="@dimen/font_title_size"
				android:textColor="@color/md_grey_600"
				android:id="@+id/textView297"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32.0dip"
				android:text="About!"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="32.0dip"
				android:layout_marginEnd="32.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/view106" />
			<TextView
				android:textSize="@dimen/font_body_size"
				android:textColor="@color/md_grey_600"
				android:id="@+id/textView298"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8.0dip"
				android:text="@string/arclayout_description"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="32.0dip"
				android:layout_marginEnd="32.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView297" />
			<TextView
				android:textSize="@dimen/font_title_size"
				android:textColor="@color/md_grey_600"
				android:id="@+id/textView299"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="32.0dip"
				android:text="Journey ou for!"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="32.0dip"
				android:layout_marginEnd="32.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView298" />
			<TextView
				android:textSize="@dimen/font_body_size"
				android:textColor="@color/md_grey_600"
				android:id="@+id/textView300"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="8.0dip"
				android:text="@string/arclayout_development"
				android:fontFamily="@font/roboto"
				android:textAlignment="center"
				android:layout_marginStart="32.0dip"
				android:layout_marginEnd="32.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintHorizontal_bias="0.0"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView299" />
			<LinearLayout
				android:orientation="horizontal"
				android:layout_width="300.0dip"
				android:layout_height="50.0dip"
				android:layout_marginTop="32.0dip"
				android:layout_marginStart="8.0dip"
				android:layout_marginEnd="8.0dip"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toBottomOf="@+id/textView300">


				<ImageView
					android:id="@+id/id_instagram"
					android:layout_width="92.0dip"
					android:layout_height="40.0dip"
					android:layout_weight="1.0"
					android:src="@drawable/ic_instagram" />

				<ImageView
					android:id="@+id/id_facebook"
					android:layout_width="92.0dip"
					android:layout_height="40.0dip"
					android:layout_weight="1.0"
					android:src="@drawable/ic_facebook" />

				<ImageView
					android:id="@+id/id_whatsapp"
					android:layout_width="92.0dip"
					android:layout_height="40.0dip"
					android:layout_weight="1.0"
					android:src="@drawable/ic_whatsapp" />
			</LinearLayout>
		</android.support.constraint.ConstraintLayout>
	</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
